--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -67,6 +67,7 @@ and open the template in the editor.
 
                     var geocoder = new google.maps.Geocoder();
                     var yourLocation = new google.maps.LatLng(lat, lng);
+                    alert(lat);
                     ubicarMapa(lat, lng);
                     geocoder.geocode({'latLng': yourLocation}, processGeocoder);
 
