--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -19,6 +19,7 @@ and open the template in the editor.
         <script src="js/jquery.liveSearch.js"></script>
         <script src="js/app.js"></script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBAibBz2Z0H3jFKhC9zguoL9jNU4fwlQGw&sensor=true&libraries=geometry"></script>
+        <script src="js/gmaps.js"></script>
         <script src="phonegap.js" type="text/javascript"></script>
         <script type="text/javascript" charset="utf-8" src="PushNotification.js"></script>   
         <script src="cdv-plugin-fb-connect.js"></script>
