--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -375,7 +375,7 @@ and open the template in the editor.
                 <div data-role="navbar" >
                    <ul>
                         <li><a href="#" data-icon="clock" class="ui-btn-active"><p class="smallLetter">Diligencias</p></a></li>
-                        <li><a href="tabRestaurantes.html" data-icon="location" ><p class="smallLetter">Restaurantes</p></a></li>
+                        <li><a data-ajax="false" href="tabRestaurantes.html" data-icon="location" ><p class="smallLetter">Restaurantes</p></a></li>
                         <li><a href="mostrarSitioServicio.html" data-icon="info"><p class="smallLetter">Otros</p></a></li>
                         <li><a href="carrito.html" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
                     </ul>
