--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -234,7 +234,7 @@ and open the template in the editor.
             <div data-role="footer" data-position="fixed" data-fullscreen="false"  id="foot" style="overflow:hidden;">
                 <div data-role="navbar" >
                    <ul>
-                        <li><a href="index.html" data-icon="clock" class="ui-btn-active"><p class="smallLetter">Diligencias</p></a></li>
+                        <li><a data-ajax="false" href="index.html" data-icon="clock" class="ui-btn-active"><p class="smallLetter">Diligencias</p></a></li>
                         <li><a href="#" data-icon="location" ><p class="smallLetter">Restaurantes</p></a></li>
                         <li><a href="mostrarSitioServicio.html" data-icon="info"><p class="smallLetter">Otros</p></a></li>
                         <li><a href="carrito.html" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
