--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -190,7 +190,7 @@ and open the template in the editor.
                                 alert("3");
                                 $('#lista').show();
                                 alert("4");
-                                $('#lista').listview('refresh');
+                                //$('#lista').listview('refresh');
                                 alert("5");
                                 $.mobile.loading("hide");
                                 alert("6");
