--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -219,7 +219,7 @@ and open the template in the editor.
                   <div data-role="navbar">
                     <ul>
                       <li><a href="#one" data-ajax="false">Mapa</a></li>
-                      <li><a href="#two" onclick="mostrarLista();" data-ajax="false">Lista</a></li>
+                      <li><a href="#two" onclick="mostrarLista();">Lista</a></li>
                     </ul>
                   </div>
                   <div  data-inset="false" id="one" class="ui-body-d ui-content">
