--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -219,13 +219,14 @@ and open the template in the editor.
                   <div data-role="navbar">
                     <ul>
                       <li><a href="#one" data-ajax="false">Mapa</a></li>
-                      <li><a href="#two" onclick="mostrarLista();">Lista</a></li>
+                      <li><a href="#two" data-ajax="false" onclick="//mostrarLista();">Lista</a></li>
                     </ul>
                   </div>
                   <div  data-inset="false" id="one" class="ui-body-d ui-content">
                     <div id="mapa" style="width: 100%"></div>
                   </div>
                   <div id="two">
+                    <p>hola</p>
                     <ul data-role="listview" data-filter="true" data-filter-placeholder="Busqueda Rápida..." data-inset="false" id="lista">
 
                     </ul>
