--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -227,9 +227,9 @@ and open the template in the editor.
                   </div>
                   <div id="two">
                     <p>hola</p>
-                    <ul data-role="listview" data-filter="true" data-filter-placeholder="Busqueda Rápida..." data-inset="false" id="lista">
+                    <!--<ul data-role="listview" data-filter="true" data-filter-placeholder="Busqueda Rápida..." data-inset="false" id="lista">
 
-                    </ul>
+                    </ul>-->
                   </div>
                 </div>
                 
