--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -43,7 +43,7 @@ and open the template in the editor.
             }
 
             function onDeviceReady() {
-                cargarMapa();
+               // cargarMapa();
             }
 
             var mapa;
@@ -222,8 +222,9 @@ and open the template in the editor.
                       <li><a href="#two" data-ajax="false" onclick="//mostrarLista();">Lista</a></li>
                     </ul>
                   </div>
-                  <div  data-inset="false" id="one" class="ui-body-d ui-content">
-                    <div id="mapa" style="width: 100%"></div>
+                  <div  data-inset="false" id="one">
+                    <p>hola</p>
+                    <!--<div id="mapa" style="width: 100%"></div>-->
                   </div>
                   <div id="two">
                     <p>hola</p>
