--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -227,7 +227,7 @@ and open the template in the editor.
                     <!--<div id="mapa" style="width: 100%"></div>-->
                   </div>
                   <div id="two">
-                    <p>hola</p>
+                    <p>hola2</p>
                     <!--<ul data-role="listview" data-filter="true" data-filter-placeholder="Busqueda Rápida..." data-inset="false" id="lista">
 
                     </ul>-->
