--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -223,8 +223,7 @@ and open the template in the editor.
                     </ul>
                   </div>
                   <div data-inset="false" id="one">
-                    <p>hola</p>
-                    <!--<div id="mapa" style="width: 100%"></div>-->
+                    <div id="mapa" style="width: 100%"></div>
                   </div>
                   <div id="two">
                     <ul data-role="listview" data-filter="true" data-filter-placeholder="Busqueda Rápida..." data-inset="false" id="lista">
