--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -219,7 +219,7 @@ and open the template in the editor.
                   <div data-role="navbar">
                     <ul>
                       <li><a href="#one" data-ajax="false">Mapa</a></li>
-                      <li><a href="#two" data-ajax="false" onclick="mostrarLista()">Lista</a></li>
+                      <li><a href="hacerPedido.html" data-ajax="false" onclick="mostrarLista()">Lista</a></li>
                     </ul>
                   </div>
                   <div data-inset="false" id="one">
