--- a/Blink-Cliente/public_html/restaurantes.html
+++ b/Blink-Cliente/public_html/restaurantes.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/blink-theme-jqm.min.css" />
+        <link rel="stylesheet" href="css/blink-theme-jqm.css" />
         <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
         <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css" />
         <link rel="stylesheet" href="css/style.css" />
