--- a/Blink-Cliente/public_html/restaurantes.html
+++ b/Blink-Cliente/public_html/restaurantes.html
@@ -95,7 +95,7 @@ and open the template in the editor.
                     data: {
                         idTipo: idTipo,
                         ciudad: ciudad,
-                        seccion: localStorage.getItem("seccion")
+                        seccion: "PEDIDOS"
                     }
                 })
                         .done(function(msg) {
