--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -376,8 +376,8 @@ and open the template in the editor.
                    <ul>
                         <li><a href="#" data-icon="clock" class="ui-btn-active"><p class="smallLetter">Diligencias</p></a></li>
                         <li><a data-ajax="false" href="tabRestaurantes.html" data-icon="location" ><p class="smallLetter">Restaurantes</p></a></li>
-                        <li><a href="mostrarSitioServicio.html" data-icon="info"><p class="smallLetter">Otros</p></a></li>
-                        <li><a href="carrito.html" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
+                        <li><a href=#" data-icon="info" data-ajax="false"><p class="smallLetter" onclick="servicios()">Otros</p></a></li>
+                        <li><a href="carrito.html" data-ajax="false" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
                     </ul>
                 </div><!-- /navbar -->
              </div>
