--- a/Blink-Cliente/public_html/mostrarRestaurante.html
+++ b/Blink-Cliente/public_html/mostrarRestaurante.html
@@ -20,10 +20,10 @@ and open the template in the editor.
         <div data-role="page" id="pagina">
             <div data-role="header" data-position="fixed" data-fullscreen="false">
                 <a href="#" style="border: none; background-color: #f7931e;  box-shadow: none; margin-top: 11px" onclick="atras()" class="ui-nodisc-icon ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-a ui-btn-inline">Atras</a>
-                <h3><img  src="image/logo.png" style="width: 130px;margin-top: 4px" /></h3>
+                <h3><img  src="image/logo.png" style="width: 80px;margin-top: 4px" /></h3>
                 
             </div>
-            <div data-role="panel" data-display="overlay" data-position="right" id="menu">
+            <!--<div data-role="panel" data-display="overlay" data-position="right" id="menu">
                 <input type="search" name="buscaRestaurante" id="buscaRestaurante" placeholder="Buscar Lugar">
                 <br>
                 <ul data-role="listview">
