--- a/Blink-Cliente/public_html/tabRestaurantes.html
+++ b/Blink-Cliente/public_html/tabRestaurantes.html
@@ -36,8 +36,8 @@ and open the template in the editor.
                    <ul>
                         <li><a data-ajax="false" href="index.html" data-icon="clock"><p class="smallLetter">Diligencias</p></a></li>
                         <li><a href="#" data-icon="location" class="ui-btn-active" ><p class="smallLetter">Restaurantes</p></a></li>
-                        <li><a href="mostrarSitioServicio.html" data-icon="info"><p class="smallLetter">Otros</p></a></li>
-                        <li><a href="carrito.html" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
+                        <li><a href="#" data-icon="info" onclick="servicios()"><p class="smallLetter">Otros</p></a></li>
+                        <li><a href="carrito.html" data-ajax="false" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
                     </ul>
                 </div><!-- /navbar--> 
              </div>
