--- a/Blink-Cliente/public_html/tipoRestaurantes.html
+++ b/Blink-Cliente/public_html/tipoRestaurantes.html
@@ -49,8 +49,8 @@ and open the template in the editor.
                 <div data-role="navbar" >
                    <ul>
                         <li><a data-ajax="false" href="index.html" data-icon="clock"><p class="smallLetter">Diligencias</p></a></li>
-                        <li><a href="tabRestaurantes.html" data-icon="location"  ><p class="smallLetter">Restaurantes</p></a></li>
-                        <li><a href="#" data-icon="info" class="ui-btn-active"><p class="smallLetter">Otros</p></a></li>
+                        <li><a data-ajax="false" href="tabRestaurantes.html" data-icon="location"  ><p class="smallLetter">Restaurantes</p></a></li>
+                        <li><a href="#" data-icon="info" class="ui-btn-active" ><p class="smallLetter">Otros</p></a></li>
                         <li><a href="carrito.html" data-icon="shop" data-ajax="false"><p class="smallLetter">Carrito</p></a></li>
                     </ul>
                 </div><!-- /navbar--> 
@@ -66,6 +66,7 @@ and open the template in the editor.
         <script>
             
             $(document).ready(function(){
+                alert("..");
                 var cadena = $("#foot").html();
                 
                 $("#foot").html(cadena.replace(/&nbsp;/g,''));
