--- a/Blink-Cliente/public_html/restaurantes.html
+++ b/Blink-Cliente/public_html/restaurantes.html
@@ -63,7 +63,7 @@ and open the template in the editor.
             }
 
             function onDeviceReady() {
-                
+                alert(localStorage.getItem("seccion"));
                 if(localStorage.getItem("seccion") == "SERVICIOS"){
                     $("#tabServicio").addClass("ui-btn-active");
                 }else{
@@ -128,17 +128,16 @@ and open the template in the editor.
             }
 
             function mostrarRestaurante(idRestaurante) {
-                localStorage.setItem("idRestaurante", idRestaurante);
-                location.href = "mostrarRestaurante.html"; 
-                //var seccion = localStorage.getItem("seccion");
-                /*var seccion = "PEDIDOS";
+                //localStorage.setItem("idRestaurante", idRestaurante);
+                //location.href = "mostrarRestaurante.html"; 
+                var seccion = localStorage.getItem("seccion");
                 if(seccion == "PEDIDOS"){
                    location.href = "mostrarRestaurante.html"; 
                 }else if(seccion == "RESERVAS"){
                    location.href = "mostrarSitioReserva.html"; 
                 }else if(seccion == "SERVICIOS"){
                    location.href = "mostrarSitioServicio.html"; 
-                }*/
+                }
                 
             }
         </script>
