--- a/Blink-Cliente/public_html/restaurantes.html
+++ b/Blink-Cliente/public_html/restaurantes.html
@@ -32,9 +32,9 @@ and open the template in the editor.
                 <div data-role="navbar" >
                    <ul>
                         <li><a data-ajax="false" href="index.html" data-icon="clock"><p class="smallLetter">Diligencias</p></a></li>
-                    <li><a data-ajax="false" href="tabRestaurantes.html" data-icon="location" id="tabRest" ><p class="smallLetter">Restaurantes</p></a></li>
-                    <li><a href="mostrarSitioServicio.html" data-icon="info" id="tabServicio" onclick="servicios()"><p class="smallLetter">Otros</p></a></li>
-                        <li><a href="carrito.html" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
+                        <li><a data-ajax="false" href="tabRestaurantes.html" data-icon="location" id="tabRest" ><p class="smallLetter">Restaurantes</p></a></li>
+                        <li><a href="mostrarSitioServicio.html" data-icon="info" id="tabServicio" onclick="servicios()"><p class="smallLetter">Otros</p></a></li>
+                        <li><a href="carrito.html" data-ajax="false" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
                     </ul>
                 </div><!-- /navbar--> 
              </div>
