--- a/Blink-Cliente/public_html/carrito.html
+++ b/Blink-Cliente/public_html/carrito.html
@@ -9,14 +9,73 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/restaurantes.min.css" />
+        <link rel="stylesheet" href="css/blink-theme-jqm.css" />
         <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
-        <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.2.min.css" />
-        <link rel="stylesheet" href="css/responsiveslides.css" />
+        <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css" />
         <link rel="stylesheet" href="css/style.css" />
+    </head>
+    <body>
+        <div data-role="page">
+
+            <div data-role="header" id="head" data-position="fixed" data-fullscreen="false" style="padding: 0">
+                <h3><img  src="image/logo.png" style="width: 80px;margin-top: 4px" /></h3>
+                <!--<a href="#menu" id="btnMenu" style="border: none; background-color: #f7931e; box-shadow: none; margin-top: 11px" class="ui-nodisc-icon ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-notext ui-btn-a ui-btn-inline">Menù</a>-->
+            </div>
+            <!--<div data-role="panel" data-display="overlay" data-position="right" id="menu">
+                <input type="search" name="buscaRestaurante" id="buscaRestaurante" placeholder="Buscar Lugar">
+                <br>
+                <ul data-role="listview">
+                    <li data-icon="home"><a data-ajax="false" href="index.html">Inicio</a></li>
+                    <li data-icon="check"><a id="iniciar" data-ajax="false" href="iniciarSesion.html">Inicia Sesión</a></li>
+                    <li data-icon="user"><a  id="perfil" data-ajax="false" href="perfil.html">Tu Perfil</a></li>
+                    <li data-icon="shop"><a href="#" data-ajax="false" onclick="pedidos()">Pedidos</a></li>
+                    <li data-icon="calendar"><a href="#" data-ajax="false" onclick="reservas()">Reservas</a></li>
+                    <li data-icon="info"><a href="#" data-ajax="false" onclick="servicios()">Servicios</a></li>
+                    <li data-icon="clock"><a href="diligencias.html" data-ajax="false">Diligencias</a></li>
+                    <li data-icon="location"><a data-ajax="false" href="verCercanos.html">Lugares Cercanos</a></li>
+                    <li data-icon="power"><a data-ajax="false" id="cerrar" href="#" onclick="cerrarSesion()">Cerrar Sesión</a></li>
+                </ul>
+            </div><!-- /panel -->
+            <div role="main" id="contenido" class="ui-content">  
+                <input id="estado" type="hidden" />
+
+                <div class="ui-body ui-body-a ui-corner-all">
+                    <h4 class="centrado" id="rest" style="margin-top: 5px; margin-bottom: 5px;">Descripción</h4>
+                    <center><div class="ui-block-a" style="width: 50%"><div id="cantidad" class="ui-nodisc-icon ui-alt-icon" style="font-size: 11px"><a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-heart ui-btn-icon-notext ui-btn-inline">Delete</a></div></div></center>
+                    <center><div class="ui-block-b"><div id="total" class="ui-nodisc-icon ui-alt-icon" style="font-size: 11px"><a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-shop ui-btn-icon-notext ui-btn-inline">Delete</a></div></div></center>
+                    <br>
+                    <br>
+                    <a href="#" onclick="menu()" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-eye ui-btn-icon-right">Ver Menú</a>
+                    <a style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" onclick="btnPedido()" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right">Hacer Pedido</a>
+                    <a style="background-color: #be1522; color: white; text-decoration: none;text-shadow: none" href="#" onclick="borrarCarrito()" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-delete ui-btn-icon-right">Borrar Pedido</a>
+                </div>
+            </div>
+            <div data-role="popup" id="popup" data-overlay-theme="b" data-theme="b" class="ui-corner-all" data-dismissible="false">
+
+                <div style="padding:10px 20px;">
+                    <a href="#" data-rel="back" id="close" onclick="reset();" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+                    <h3 id="titu" style="text-align: center"></h3>                        
+                    <p style="text-align: center" id="desc"></p>
+                    <p style="text-align: center; font-weight: bold" id="prec"></p>
+                    <div class="ui-field-contain">
+                        <label for="canti">Cantidad:</label>
+                        <input type="number" data-clear-btn="true" id="canti" name="canti" data-theme="a" value="">
+                    </div>
+                    <div class="ui-field-contain">
+                        <label for="indicaciones">Indicaciones:</label>
+                        <input type="text" data-clear-btn="true" id="indicaciones" placeholder="Ej: Sin cebolla" name="canti" data-theme="a" value="">
+                    </div>
+
+                    <input type="hidden" value="" id="idProducto">
+                    <button class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-right ui-icon-check" id="btnPop" onclick="añadir()">Añadir</button>
+                    <button class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-right ui-icon-check" id="btnEliminar" hidden onclick="eliminar()">Quitar</button>
+                </div>
+
+            </div>
+        </div>
         <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/jquery.mobile-1.4.2.min.js"></script>
-        <script src="js/app.js"></script>
+        <script src="js/jquery.mobile-1.4.5.min.js"></script>
+        <script src="js/app.js"></script> 
         <script src="phonegap.js" type="text/javascript"></script>
         <script>
             document.addEventListener("menubutton", onMenuKeyDown, false);
@@ -169,67 +228,5 @@ and open the template in the editor.
                 }
             }
         </script>
-    </head>
-    <body>
-        <div data-role="page">
-
-            <div data-role="header" data-position="fixed" data-fullscreen="false">
-                <a href="#" style="border: none; background-color: #c5021a;  box-shadow: none; margin-top: 11px" onclick="atras()" class="ui-nodisc-icon ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-a ui-btn-inline">Atras</a>
-                <h3><img  src="image/header.png" style="width: 130px;margin-top: 4px" /></h3>
-                <a href="#menu" id="btnMenu" style="border: none; background-color: #c5021a; box-shadow: none; margin-top: 11px" class="ui-nodisc-icon ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-notext ui-btn-a ui-btn-inline">Menù</a>
-            </div>
-            <div data-role="panel" data-display="overlay" data-position="right" id="menu">
-                <input type="search" name="buscaRestaurante" id="buscaRestaurante" placeholder="Buscar Lugar">
-                <br>
-                <ul data-role="listview">
-                    <li data-icon="home"><a data-ajax="false" href="index.html">Inicio</a></li>
-                    <li data-icon="check"><a id="iniciar" data-ajax="false" href="iniciarSesion.html">Inicia Sesión</a></li>
-                    <li data-icon="user"><a  id="perfil" data-ajax="false" href="perfil.html">Tu Perfil</a></li>
-                    <li data-icon="shop"><a href="#" data-ajax="false" onclick="pedidos()">Pedidos</a></li>
-                    <li data-icon="calendar"><a href="#" data-ajax="false" onclick="reservas()">Reservas</a></li>
-                    <li data-icon="info"><a href="#" data-ajax="false" onclick="servicios()">Servicios</a></li>
-                    <li data-icon="clock"><a href="diligencias.html" data-ajax="false">Diligencias</a></li>
-                    <li data-icon="location"><a data-ajax="false" href="verCercanos.html">Lugares Cercanos</a></li>
-                    <li data-icon="power"><a data-ajax="false" id="cerrar" href="#" onclick="cerrarSesion()">Cerrar Sesión</a></li>
-                </ul>
-            </div><!-- /panel -->
-            <div role="main" id="contenido" class="ui-content">  
-                <input id="estado" type="hidden" />
-
-                <div class="ui-body ui-body-a ui-corner-all">
-                    <h4 class="centrado" id="rest" style="margin-top: 5px; margin-bottom: 5px;">Descripción</h4>
-                    <center><div class="ui-block-a" style="width: 50%"><div id="cantidad" class="ui-nodisc-icon ui-alt-icon" style="font-size: 11px"><a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-heart ui-btn-icon-notext ui-btn-inline">Delete</a></div></div></center>
-                    <center><div class="ui-block-b"><div id="total" class="ui-nodisc-icon ui-alt-icon" style="font-size: 11px"><a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-shop ui-btn-icon-notext ui-btn-inline">Delete</a></div></div></center>
-                    <br>
-                    <br>
-                    <a href="#" onclick="menu()" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-eye ui-btn-icon-right">Ver Menú</a>
-                    <a style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" onclick="btnPedido()" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right">Hacer Pedido</a>
-                    <a style="background-color: #be1522; color: white; text-decoration: none;text-shadow: none" href="#" onclick="borrarCarrito()" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-delete ui-btn-icon-right">Borrar Pedido</a>
-                </div>
-            </div>
-            <div data-role="popup" id="popup" data-overlay-theme="b" data-theme="b" class="ui-corner-all" data-dismissible="false">
-
-                <div style="padding:10px 20px;">
-                    <a href="#" data-rel="back" id="close" onclick="reset();" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-                    <h3 id="titu" style="text-align: center"></h3>                        
-                    <p style="text-align: center" id="desc"></p>
-                    <p style="text-align: center; font-weight: bold" id="prec"></p>
-                    <div class="ui-field-contain">
-                        <label for="canti">Cantidad:</label>
-                        <input type="number" data-clear-btn="true" id="canti" name="canti" data-theme="a" value="">
-                    </div>
-                    <div class="ui-field-contain">
-                        <label for="indicaciones">Indicaciones:</label>
-                        <input type="text" data-clear-btn="true" id="indicaciones" placeholder="Ej: Sin cebolla" name="canti" data-theme="a" value="">
-                    </div>
-
-                    <input type="hidden" value="" id="idProducto">
-                    <button class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-right ui-icon-check" id="btnPop" onclick="añadir()">Añadir</button>
-                    <button class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-right ui-icon-check" id="btnEliminar" hidden onclick="eliminar()">Quitar</button>
-                </div>
-
-            </div>
-        </div>
-
     </body>
 </html>
