--- a/Blink-Cliente/public_html/hacerPedido.html
+++ b/Blink-Cliente/public_html/hacerPedido.html
@@ -9,14 +9,84 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/restaurantes.min.css" />
+        <link rel="stylesheet" href="css/blink-theme-jqm.css" />
         <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
-        <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.2.min.css" />
-        <link rel="stylesheet" href="css/responsiveslides.css" />
+        <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css" />
         <link rel="stylesheet" href="css/style.css" />
+    </head>
+    <body>
+        <div data-role="page">
+            <div data-role="header" data-position="fixed" data-fullscreen="false">
+                <a href="#" style="border: none; background-color: #c5021a;  box-shadow: none; margin-top: 11px" onclick="atras()" class="ui-nodisc-icon ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-a ui-btn-inline">Atras</a>
+                <h3><img  src="image/header.png" style="width: 130px;margin-top: 4px" /></h3>
+                <a href="#menu" id="btnMenu" style="border: none; background-color: #c5021a; box-shadow: none; margin-top: 11px" class="ui-nodisc-icon ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-notext ui-btn-a ui-btn-inline">Menù</a>
+            </div>
+            <div data-role="panel" data-display="overlay" data-position="right" id="menu">
+                <input type="search" name="buscaRestaurante" id="buscaRestaurante" placeholder="Buscar Lugar">
+                <br>
+                <!--<ul data-role="listview">
+                    <li data-icon="home"><a data-ajax="false" href="index.html">Inicio</a></li>
+                    <li data-icon="check"><a id="iniciar" data-ajax="false" href="iniciarSesion.html">Inicia Sesión</a></li>
+                    <li data-icon="user"><a  id="perfil" data-ajax="false" href="perfil.html">Tu Perfil</a></li>
+                    <li data-icon="shop"><a href="#" data-ajax="false" onclick="pedidos()">Pedidos</a></li>
+                    <li data-icon="calendar"><a href="#" data-ajax="false" onclick="reservas()">Reservas</a></li>
+                    <li data-icon="info"><a href="#" data-ajax="false" onclick="servicios()">Servicios</a></li>
+                    <li data-icon="clock"><a href="diligencias.html" data-ajax="false">Diligencias</a></li>
+                    <li data-icon="location"><a data-ajax="false" href="verCercanos.html">Lugares Cercanos</a></li>
+                    <li data-icon="power"><a data-ajax="false" id="cerrar" href="#" onclick="cerrarSesion()">Cerrar Sesión</a></li>
+                </ul>
+            </div><!-- /panel -->
+
+            <div role="main" class="ui-content">
+
+                <div id="mapa" style="width: 100%"></div>
+                <hr>
+                <div class="ui-body ui-body-a ui-corner-all">
+                    <center><p><b>Valor del Domicilio: $2000</b></p></center>
+                    <div class="ui-field-contain">
+                        <label for="direccion"><b>*Modificar Dirección:</b></label>
+                        <input type="text" name="direccion" id="direccion" placeholder="Ej: Cra 5c # 20 - 54" value="">
+                    </div>
+                    <div class="ui-field-contain">
+                        <label for="referencias"><b>Barrio y/o Referencias:</b></label>
+                        <input type="text" name="referencias" id="referencias" placeholder="Ej: Sicarare, Junto al Parque Blanco" value="">
+                    </div>
+                    <div class="ui-field-contain">
+                        <label for="telefono"><b>*Teléfono:</b></label>
+                        <input type="number" max="12" min="8" name="telefono" id="telefono" placeholder="Teléfono" value="">
+                    </div>
+                    <div class="ui-field-contain">
+                        <label for="billete"><b>Como pagarás?</b></label>
+                        <input type="text" name="billete" id="billete" placeholder="Ej: Dos billetes de 20.000" value="">
+                    </div>
+                    <a id="btnEnvio" style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" href="#" onclick="comprobarLogin();" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right">Confirmar Domicilio</a>
+                </div>
+                <a href="#popupLogin" id="btnPopup" hidden data-rel="popup" data-position-to="window" data-transition="flow" style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right boton">Aceptar</a>
+
+                <div data-role="popup" id="popupLogin" data-overlay-theme="b" data-theme="b" class="ui-corner-all" data-dismissible="false">
+
+                    <div style="padding:10px 20px;">
+                        <a href="#" data-rel="back" id="closeLogin"  class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+                        <center><h5 style="text-align: center">Debes Iniciar Sesión</h5></center>
+                        <center><h6>Registrate con tu correo</h6></center>
+                        <a href="registrarUsuario.html" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-mail ui-btn-icon-right ">Registrarse</a>
+                        <!--<a href="#" onclick="facebook()" style="background-color: #4b67a1; color: white; text-decoration: none;text-shadow: none" class="ui-btn ui-shadow ui-corner-all ui-icon-user ui-btn-icon-right boton">Entra Con Facebook</a>-->
+                        <center><h5 style="text-align: center">Ó Entra con tu correo</h5></center>
+                        <label for="correo" class="ui-hidden-accessible">Correo:</label>
+                        <input type="email" id="correo" placeholder="Correo" value="">
+                        <label for="clave" class="ui-hidden-accessible">Contraseña:</label>
+                        <input type="password" id="clave" placeholder="Contraseña" value="">
+                        <button class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-right ui-icon-check" onclick="login()">Iniciar Sesión</button>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+        
         <script src="js/jquery-1.11.1.min.js"></script>
-        <script src="js/jquery.mobile-1.4.2.min.js"></script>
-        <script src="js/responsiveslides.min.js"></script>
+        <script src="js/jquery.mobile-1.4.5.min.js"></script>
         <script src="phonegap.js" type="text/javascript"></script>
         <!--<script src="cdv-plugin-fb-connect.js"></script>
         <script src="facebook-js-sdk.js"></script>-->
@@ -346,76 +416,6 @@ and open the template in the editor.
                         });
             }
         </script>
-    </head>
-    <body>
-        <div data-role="page">
-            <div data-role="header" data-position="fixed" data-fullscreen="false">
-                <a href="#" style="border: none; background-color: #c5021a;  box-shadow: none; margin-top: 11px" onclick="atras()" class="ui-nodisc-icon ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-a ui-btn-inline">Atras</a>
-                <h3><img  src="image/header.png" style="width: 130px;margin-top: 4px" /></h3>
-                <a href="#menu" id="btnMenu" style="border: none; background-color: #c5021a; box-shadow: none; margin-top: 11px" class="ui-nodisc-icon ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-notext ui-btn-a ui-btn-inline">Menù</a>
-            </div>
-            <div data-role="panel" data-display="overlay" data-position="right" id="menu">
-                <input type="search" name="buscaRestaurante" id="buscaRestaurante" placeholder="Buscar Lugar">
-                <br>
-                <ul data-role="listview">
-                    <li data-icon="home"><a data-ajax="false" href="index.html">Inicio</a></li>
-                    <li data-icon="check"><a id="iniciar" data-ajax="false" href="iniciarSesion.html">Inicia Sesión</a></li>
-                    <li data-icon="user"><a  id="perfil" data-ajax="false" href="perfil.html">Tu Perfil</a></li>
-                    <li data-icon="shop"><a href="#" data-ajax="false" onclick="pedidos()">Pedidos</a></li>
-                    <li data-icon="calendar"><a href="#" data-ajax="false" onclick="reservas()">Reservas</a></li>
-                    <li data-icon="info"><a href="#" data-ajax="false" onclick="servicios()">Servicios</a></li>
-                    <li data-icon="clock"><a href="diligencias.html" data-ajax="false">Diligencias</a></li>
-                    <li data-icon="location"><a data-ajax="false" href="verCercanos.html">Lugares Cercanos</a></li>
-                    <li data-icon="power"><a data-ajax="false" id="cerrar" href="#" onclick="cerrarSesion()">Cerrar Sesión</a></li>
-                </ul>
-            </div><!-- /panel -->
-
-            <div role="main" class="ui-content">
-
-                <div id="mapa" style="width: 100%"></div>
-                <hr>
-                <div class="ui-body ui-body-a ui-corner-all">
-                    <center><p><b>Valor del Domicilio: $2000</b></p></center>
-                    <div class="ui-field-contain">
-                        <label for="direccion"><b>*Modificar Dirección:</b></label>
-                        <input type="text" name="direccion" id="direccion" placeholder="Ej: Cra 5c # 20 - 54" value="">
-                    </div>
-                    <div class="ui-field-contain">
-                        <label for="referencias"><b>Barrio y/o Referencias:</b></label>
-                        <input type="text" name="referencias" id="referencias" placeholder="Ej: Sicarare, Junto al Parque Blanco" value="">
-                    </div>
-                    <div class="ui-field-contain">
-                        <label for="telefono"><b>*Teléfono:</b></label>
-                        <input type="number" max="12" min="8" name="telefono" id="telefono" placeholder="Teléfono" value="">
-                    </div>
-                    <div class="ui-field-contain">
-                        <label for="billete"><b>Como pagarás?</b></label>
-                        <input type="text" name="billete" id="billete" placeholder="Ej: Dos billetes de 20.000" value="">
-                    </div>
-                    <a id="btnEnvio" style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" href="#" onclick="comprobarLogin();" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right">Confirmar Domicilio</a>
-                </div>
-                <a href="#popupLogin" id="btnPopup" hidden data-rel="popup" data-position-to="window" data-transition="flow" style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right boton">Aceptar</a>
-
-                <div data-role="popup" id="popupLogin" data-overlay-theme="b" data-theme="b" class="ui-corner-all" data-dismissible="false">
-
-                    <div style="padding:10px 20px;">
-                        <a href="#" data-rel="back" id="closeLogin"  class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
-                        <center><h5 style="text-align: center">Debes Iniciar Sesión</h5></center>
-                        <center><h6>Registrate con tu correo</h6></center>
-                        <a href="registrarUsuario.html" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-mail ui-btn-icon-right ">Registrarse</a>
-                        <!--<a href="#" onclick="facebook()" style="background-color: #4b67a1; color: white; text-decoration: none;text-shadow: none" class="ui-btn ui-shadow ui-corner-all ui-icon-user ui-btn-icon-right boton">Entra Con Facebook</a>-->
-                        <center><h5 style="text-align: center">Ó Entra con tu correo</h5></center>
-                        <label for="correo" class="ui-hidden-accessible">Correo:</label>
-                        <input type="email" id="correo" placeholder="Correo" value="">
-                        <label for="clave" class="ui-hidden-accessible">Contraseña:</label>
-                        <input type="password" id="clave" placeholder="Contraseña" value="">
-                        <button class="ui-btn ui-corner-all ui-shadow ui-btn-b ui-btn-icon-right ui-icon-check" onclick="login()">Iniciar Sesión</button>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-
+        
     </body>
 </html>
