--- a/Blink-Cliente/public_html/restaurantes.html
+++ b/Blink-Cliente/public_html/restaurantes.html
@@ -63,7 +63,7 @@ and open the template in the editor.
             }
 
             function onDeviceReady() {
-                alert(localStorage.getItem("seccion"));
+                //alert(localStorage.getItem("seccion"));
                 if(localStorage.getItem("seccion") == "SERVICIOS"){
                     $("#tabServicio").addClass("ui-btn-active");
                 }else{
