--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -61,6 +61,13 @@ and open the template in the editor.
 //                $("#contHora").hide();
 //                FB.init({appId: "1428385527442767", nativeInterface: CDV.FB, useCachedDialogs: false});
 
+                var dbExist = localStorage.getItem("dbExist");
+                if (dbExist != "true") {
+                    crearDb();
+                }
+                
+                initPush();
+                
                 $("#mapa").height($(document).height() - $("#head").height() - $("#foot").height() - ($("#btnPopupDiligencia").height()*3));
                 navigator.geolocation.getCurrentPosition(function(position) {
                     var lat = position.coords.latitude;
@@ -107,7 +114,6 @@ and open the template in the editor.
                 });
 
                 agregarRuta(lat, lng);
-
 
             }
 
