--- a/Blink-Cliente/public_html/menu.html
+++ b/Blink-Cliente/public_html/menu.html
@@ -51,7 +51,7 @@ and open the template in the editor.
 
                 var idRestaurante = localStorage.getItem("idRestaurante");
                 //var url = "http://192.168.1.33/domicilios/restaurante/consultarRestaurante";
-                var url = "http://admin.tudomicilio.net/restaurante/consultarRestaurante";
+                var url = "http://admin.blinkmanager.com/restaurante/consultarRestaurante";
                 //var url = "/domicilios/restaurante/consultarRestaurante";
                 $.ajax({
                     type: "POST",
@@ -80,7 +80,7 @@ and open the template in the editor.
             }
             function menu() {
                 var idRestaurante = localStorage.getItem("idRestaurante");
-                var url = "http://admin.tudomicilio.net/restaurante/menu";
+                var url = "http://admin.blinkmanager.com/restaurante/menu";
                 //var url = "http://192.168.1.33/domicilios/restaurante/menu";
                 //var url = "/domicilios/restaurante/menu";
                 $.ajax({
