--- a/Blink-Cliente/public_html/perfil.html
+++ b/Blink-Cliente/public_html/perfil.html
@@ -49,7 +49,7 @@ and open the template in the editor.
                 });
                 var idUsuario = localStorage.getItem("idUsuario");
                 //var url = "http://192.168.1.33/domicilios/restaurante/consultarUsuario";
-                var url = "http://admin.tudomicilio.net/restaurante/consultarUsuario";
+                var url = "http://admin.blinkmanager.com/restaurante/consultarUsuario";
                 //var url = "/domicilios/restaurante/consultarUsuario";
                 $.ajax({
                     type: "POST",
@@ -93,7 +93,7 @@ and open the template in the editor.
 
                 if ($("#claveV").val() == $("#pass1").val()) {
                     
-                    var url = "http://admin.tudomicilio.net/restaurante/cambiarClave";
+                    var url = "http://admin.blinkmanager.com/restaurante/cambiarClave";
                     //var url = "http://192.168.1.33/domicilios/restaurante/cambiarClave";
                     $.ajax({
                         type: "POST",
