--- a/Blink-Cliente/public_html/carrito.html
+++ b/Blink-Cliente/public_html/carrito.html
@@ -73,16 +73,16 @@ and open the template in the editor.
                 </div>
 
             </div>
-            <div data-role="footer" data-position="fixed" data-fullscreen="false"  id="foot" style="overflow:hidden;">
+            <!--<div data-role="footer" data-position="fixed" data-fullscreen="false"  id="foot" style="overflow:hidden;">
                 <div data-role="navbar" >
                    <ul>
                         <li><a data-ajax="false" href="index.html" data-icon="clock" ><p class="smallLetter">Diligencias</p></a></li>
                         <li><a data-ajax="false" href="tabRestaurantes.html" data-icon="location" ><p class="smallLetter">Restaurantes</p></a></li>
-                        <li><a href=#" data-icon="info" data-ajax="false"><p class="smallLetter" onclick="servicios()">Otros</p></a></li>
-                        <li><a href="#" data-icon="shop" class="ui-btn-active"><p class="smallLetter">Carrito</p></a></li>
+                        <li><a href="#" data-icon="star" onclick="licores()" class="ui-btn-active"><p class="smallLetter">Licores</p></a></li>
+                        <li><a href=#" data-icon="info" onclick="servicios()" data-ajax="false"><p class="smallLetter">Otros</p></a></li>
                     </ul>
-                </div><!-- /navbar -->
-             </div>
+                </div>
+             </div>-->
         </div>
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/jquery.mobile-1.4.5.min.js"></script>
@@ -127,7 +127,7 @@ and open the template in the editor.
                             localStorage.setItem("idRestaurante",results.rows.item(0).idRestaurante);
                             //var url = "/domicilios/restaurante/consultarRestaurante";
                             //var url = "http://192.168.1.33/domicilios/restaurante/consultarRestaurante";
-                            var url = "http://admin.tudomicilio.net/restaurante/consultarRestaurante";
+                            var url = "http://admin.blinkmanager.com/restaurante/consultarRestaurante";
                             $.ajax({
                                 type: "POST",
                                 url: url,
