--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -186,7 +186,7 @@ and open the template in the editor.
                         hora: hora
                     };
 
-                    var url = "http://admin.tudomicilio.net/restaurante/registrarServicio";
+                    var url = "http://admin.blinkmanager.com/restaurante/registrarServicio";
 
                     $.ajax({
                         type: "POST",
@@ -262,7 +262,7 @@ and open the template in the editor.
 //Consulta en la bd del servidor si el usuario Existe... Sino Existe Lo agrega como nuevo usuario de la App
             function confirmarRegistro(persona) {
                 //var url = "http://192.168.1.33/domicilios/restaurante/confirmarRegistroFace";
-                var url = "http://admin.tudomicilio.net/restaurante/confirmarRegistroFace";
+                var url = "http://admin.blinkmanager.com/restaurante/confirmarRegistroFace";
 
                 $.ajax({
                     type: "POST",
@@ -385,8 +385,9 @@ and open the template in the editor.
                    <ul>
                         <li><a href="#" data-icon="clock" class="ui-btn-active"><p class="smallLetter">Diligencias</p></a></li>
                         <li><a data-ajax="false" href="tabRestaurantes.html" data-icon="location" ><p class="smallLetter">Restaurantes</p></a></li>
-                        <li><a href=#" data-icon="info" data-ajax="false"><p class="smallLetter" onclick="servicios()">Otros</p></a></li>
-                        <li><a href="carrito.html" data-ajax="false" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>
+                        <li><a href="#" data-icon="star" onclick="licores()"><p class="smallLetter">Licores</p></a></li>                
+                        <li><a onclick="servicios()" href=#" data-icon="info" data-ajax="false"><p class="smallLetter">Otros</p></a></li>
+                        <!--<li><a href="carrito.html" data-ajax="false" data-icon="shop"><p class="smallLetter">Carrito</p></a></li>-->
                     </ul>
                 </div><!-- /navbar -->
              </div>
