--- a/Blink-Cliente/public_html/iniciarSesion.html
+++ b/Blink-Cliente/public_html/iniciarSesion.html
@@ -91,7 +91,7 @@ and open the template in the editor.
 //Consulta en la bd del servidor si el usuario Existe... Sino Existe Lo agrega como nuevo usuario de la App
             function confirmarRegistro(persona) {
                 //var url = "http://192.168.1.33/domicilios/restaurante/confirmarRegistroFace";
-                var url = "http://admin.tudomicilio.net/restaurante/confirmarRegistroFace";
+                var url = "http://admin.blinkmanager.com/restaurante/confirmarRegistroFace";
 
                 $.ajax({
                     type: "POST",
