--- a/Blink-Cliente/public_html/diligencias.html
+++ b/Blink-Cliente/public_html/diligencias.html
@@ -3,9 +3,9 @@
         <div class="divMap">
         <h4 style="text-align: center">Escribe Aquí Lo Que Quieres Que Hagamos Por Ti</h4>
                 
-        <textarea placeholder="Descripción" rows="5" style="width: 98% "></textarea>
+        <textarea placeholder="Descripción" id="descripcion" rows="5" style="width: 98% "></textarea>
                
-        <a style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right">
+        <a href="#" onclick="page.formDiligencias()" style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right">
             Pedir Servicio
         </a>
 
