--- a/Blink-Cliente/public_html/categoriaServicios.html
+++ b/Blink-Cliente/public_html/categoriaServicios.html
@@ -15,6 +15,7 @@
     }
     
     function mostrarRestaurante(){
-        
+        localStorage.setItem("idRestaurante", idsitio);
+        page.mostrarServicio();    
     }
 </script>
