--- a/Blink-Cliente/public_html/categoriaServicios.html
+++ b/Blink-Cliente/public_html/categoriaServicios.html
@@ -14,7 +14,7 @@
         
     }
     
-    function mostrarRestaurante(){
+    function mostrarRestaurante(idsitio){
         localStorage.setItem("idRestaurante", idsitio);
         page.mostrarServicio();    
     }
